--- a/existing-projects.html
+++ b/existing-projects.html
@@ -249,245 +249,183 @@
         </div>
       </div>
       <div class="row my-lg-5 mx-lg-5 font-roboto details d-none d-lg-flex" data-aos="fade-up">
-        <div class="col-lg-6 px-lg-0">
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Insani Bara Perkasa<br>
+                  (Rain Group Tbk)<br>
+                  Tahun: 2019<br>
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
-                <div class="col-lg-4">
-                  Lokasi
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Berambal, Kutai Kartanegara, 
+                      East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara -<br>
+                      Peningkatan Jalan <br>
+                      Pengangkutan Batubara<br>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Latahzan<br>
+                  Tahun: 2019
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
-                <div class="col-lg-4">
-                  Lokasi
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Embalut, Kutai Kartanegara,<br> 
+			                East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-6 px-lg-0">
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  KUD Padat Karya<br>
+                  Tahun: 2020
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Loa Duri, Kutai Kartanegara,<br>
+			                East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara<br>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Bumi Petangis<br>
+                  Tahun: 2020
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
-                <div class="col-lg-4">
-                  Lokasi
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Petangis, Paser,<br>
+			                East Kalimantan
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Era Energi Mandiri<br>
+                  Tahun: 2021
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Merapi Selatan, Lahat,<br>
+			                South Sumatra
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="row">
+            </div>
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lingkup Pekerjaan
+                  PT Bima Putra Abadi<br>
+                  Citranusa<br>
+                  Tahun: 2021
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Merapi Selatan, Lahat,<br>
+			                South Sumatra
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batubara
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
