--- a/existing-projects.html
+++ b/existing-projects.html
@@ -437,13 +437,15 @@
           <div class="item">
             <div class="col-lg-12 px-0">
               <h6 class="font-titillium-bold">
-                PT Insani Bara Perkasa (Rain Group Tbk)<br>
-                Tahun: 2016<br>
+                PT Insani Bara Perkasa
+                (Rain Group Tbk)<br>
+                Tahun: 2019
               </h6>
               <br>
               <p>
                 Lokasi:<br>
-                Perangat, Kutai Kartanegara, East Kalimantan<br>
+                Berambal, Kutai Kartanegara,<br>
+			          East Kalimantan<br>
                 <br>
                 Lingkup Pekerjaan:<br>
                 Pertambangan Batubara - Peningkatan Jalan<br>
@@ -451,17 +453,17 @@
               </p>
               <br><br><br>
               <h6 class="font-titillium-bold">
-                PT Multi Harapan Utama (Tbk)<br>
-                Tahun: 2016<br>
+                PT Latahzan<br>
+                Tahun: 2019
               </h6>
               <br>
               <p>
                 Lokasi:<br>
-                Loa Kulu, Kutai Kartanegara, East Kalimantan<br>
+                Embalut, Kutai Kartanegara,<br>
+			          East Kalimantan<br>
                 <br>
                 Lingkup Pekerjaan:<br>
-                Pertambangan Batubara - Peningkatan Jalan<br>
-                Pengangkutan Batubara<br>
+                Pertambangan Batubara<br>>
               </p>
             </div>
             <hr class="d-lg-none mt-4 mb-5"> 
@@ -470,31 +472,64 @@
           <div class="item">
             <div class="col-lg-12 px-0">
               <h6 class="font-titillium-bold">
-                PT Insani Bara Perkasa (Rain Group Tbk)<br>
-                Tahun: 2016<br>
+                KUD Padat Karya<br>
+                Tahun: 2020
               </h6>
               <br>
               <p>
                 Lokasi:<br>
-                Perangat, Kutai Kartanegara, East Kalimantan<br>
+                Loa Duri, Kutai Kartanegara,<br>
+			          East Kalimantan<br>
                 <br>
                 Lingkup Pekerjaan:<br>
-                Pertambangan Batubara - Peningkatan Jalan<br>
-                Pengangkutan Batubara<br>
+                Pertambangan Batubara<br>
               </p>
               <br><br><br>
               <h6 class="font-titillium-bold">
-                PT Multi Harapan Utama (Tbk)<br>
-                Tahun: 2016<br>
+                PT Bumi Petangis<br>
+                Tahun: 2020
               </h6>
               <br>
               <p>
                 Lokasi:<br>
-                Loa Kulu, Kutai Kartanegara, East Kalimantan<br>
+                Petangis, Paser,<br>
+			          East Kalimantan<br>
                 <br>
                 Lingkup Pekerjaan:<br>
-                Pertambangan Batubara - Peningkatan Jalan<br>
-                Pengangkutan Batubara<br>
+                Pertambangan Batubara<br>
+              </p>
+            </div>
+            <hr class="d-lg-none mt-4 mb-5"> 
+            <h6 class="text-right my-5">2/4</h6>
+          </div>
+          <div class="item">
+            <div class="col-lg-12 px-0">
+              <h6 class="font-titillium-bold">
+                PT Era Energi Mandiri<br>
+                Tahun: 2021
+              </h6>
+              <br>
+              <p>
+                Lokasi:<br>
+                Merapi Selatan, Lahat,<br>
+			          South Sumatra<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batubara<br>
+              </p>
+              <br><br><br>
+              <h6 class="font-titillium-bold">
+                PT Bima Putra Abadi Citranusa<br>
+                Tahun: 2021
+              </h6>
+              <br>
+              <p>
+                Lokasi:<br>
+                Merapi Selatan, Lahat,<br>
+			          South Sumatra<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batubara<br>
               </p>
             </div>
             <hr class="d-lg-none mt-4 mb-5"> 
