--- a/prospective-projects.html
+++ b/prospective-projects.html
@@ -335,245 +335,223 @@
         </div>
       </div>
       <div class="row my-lg-5 mx-lg-5 font-roboto details d-none d-lg-flex" data-aos="fade-up">
-        <div class="col-lg-6 px-lg-0">
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Patriot Panca Abadi
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
-                <div class="col-lg-4">
-                  Lokasi
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Donggala
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batu Andesit
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Nana Dia Primara
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Donggala
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batu Andesit
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Duta Raksa Sumber<br>
+                  Artha
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Donggala
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batu Andesit
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="col-lg-6 px-lg-0">
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Palu Sumber Artha
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Donggala
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batu Andesit
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Nahusam Bermartabat<br>
+                  Indonesia
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Toli-Toli
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batu Andesit
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  Toli-Toli Karya Persada
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-4">
-                  Lingkup Pekerjaan
-                </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Toli-Toli
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batu Andesit
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row mb-lg-4">
-            <div class="col-lg-4">
-              PT Insani Bara Perkasa<br>
-              (Rain Group Tbk)<br>
-              Tahun: 2016<br>
-            </div>
-            <div class="col-lg-8">
-              <div class="row">
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lokasi
+                  PT Sakher Alam Persada
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                    Perangat, Kutai Kartanegara,<br> 
-			              East Kalimantan
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Toli-Toli
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Batu Andesit
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="row">
+            </div>
+            <div class="col-lg-6 px-lg-0">
+              <div class="row mb-lg-4">
                 <div class="col-lg-4">
-                  Lingkup Pekerjaan
+                  PT Bangga Bangun
                 </div>
-                <span>:</span>
-                <div class="col-lg-6 pl-lg-1">
-                  Pertambangan Batubara -<br> 
-                  Peningkatan Jalan <br>
-                  Pengangkutan Batubara<br>
+                <div class="col-lg-8">
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lokasi
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Sulteng
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4">
+                      Lingkup Pekerjaan
+                    </div>
+                    <span>:</span>
+                    <div class="col-lg-6 pl-lg-1">
+                      Pertambangan Nikel
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
