--- a/prospective-projects.html
+++ b/prospective-projects.html
@@ -638,31 +638,27 @@
           <div class="item">
             <div class="col-lg-12 px-0">
               <h6 class="font-titillium-bold">
-                PT Insani Bara Perkasa (Rain Group Tbk)<br>
-                Tahun: 2016<br>
+                PT Patriot Panca Abadi
               </h6>
               <br>
               <p>
                 Lokasi:<br>
-                Perangat, Kutai Kartanegara, East Kalimantan<br>
+                Donggala
                 <br>
                 Lingkup Pekerjaan:<br>
-                Pertambangan Batubara - Peningkatan Jalan<br>
-                Pengangkutan Batubara<br>
+                Pertambangan Batu Andesit<br>
               </p>
               <br><br><br>
               <h6 class="font-titillium-bold">
-                PT Multi Harapan Utama (Tbk)<br>
-                Tahun: 2016<br>
+                PT Nana Dia Primara
               </h6>
               <br>
               <p>
                 Lokasi:<br>
-                Loa Kulu, Kutai Kartanegara, East Kalimantan<br>
+                Donggala<br>
                 <br>
                 Lingkup Pekerjaan:<br>
-                Pertambangan Batubara - Peningkatan Jalan<br>
-                Pengangkutan Batubara<br>
+                Pertambangan Batu Andesit<br>
               </p>
             </div>
             <hr class="d-lg-none mt-4 mb-5"> 
@@ -671,31 +667,85 @@
           <div class="item">
             <div class="col-lg-12 px-0">
               <h6 class="font-titillium-bold">
-                PT Insani Bara Perkasa (Rain Group Tbk)<br>
-                Tahun: 2016<br>
+                PT Duta Raksa Sumber Artha<br>
               </h6>
               <br>
               <p>
                 Lokasi:<br>
-                Perangat, Kutai Kartanegara, East Kalimantan<br>
+                Donggala<br>
                 <br>
                 Lingkup Pekerjaan:<br>
-                Pertambangan Batubara - Peningkatan Jalan<br>
-                Pengangkutan Batubara<br>
+                Pertambangan Batu Andesit<br>
               </p>
               <br><br><br>
               <h6 class="font-titillium-bold">
-                PT Multi Harapan Utama (Tbk)<br>
-                Tahun: 2016<br>
+                PT Palu Sumber Artha<br>
               </h6>
               <br>
               <p>
                 Lokasi:<br>
-                Loa Kulu, Kutai Kartanegara, East Kalimantan<br>
+                Donggala<br>
                 <br>
                 Lingkup Pekerjaan:<br>
-                Pertambangan Batubara - Peningkatan Jalan<br>
-                Pengangkutan Batubara<br>
+                Pertambangan Batu Andesit<br>
+              </p>
+            </div>
+            <hr class="d-lg-none mt-4 mb-5"> 
+            <h6 class="text-right my-5">2/4</h6>
+          </div>
+          <div class="item">
+            <div class="col-lg-12 px-0">
+              <h6 class="font-titillium-bold">
+                PT Nahusam Bermartabat Indonesia<br>
+              </h6>
+              <br>
+              <p>
+                Lokasi:<br>
+                Toli-Toli<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batu Andesit<br>
+              </p>
+              <br><br><br>
+              <h6 class="font-titillium-bold">
+                Toli-Toli Karya Persada<br>
+              </h6>
+              <br>
+              <p>
+                Lokasi:<br>
+                Toli-Toli<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batu Andesit<br>
+              </p>
+            </div>
+            <hr class="d-lg-none mt-4 mb-5"> 
+            <h6 class="text-right my-5">2/4</h6>
+          </div>
+          <div class="item">
+            <div class="col-lg-12 px-0">
+              <h6 class="font-titillium-bold">
+                PT Sakher Alam Persada<br>
+              </h6>
+              <br>
+              <p>
+                Lokasi:<br>
+                Toli-Toli<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Batu Andesit<br>
+              </p>
+              <br><br><br>
+              <h6 class="font-titillium-bold">
+                PT Bangga Bangun<br>
+              </h6>
+              <br>
+              <p>
+                Lokasi:<br>
+                Sulteng<br>
+                <br>
+                Lingkup Pekerjaan:<br>
+                Pertambangan Nikel<br>
               </p>
             </div>
             <hr class="d-lg-none mt-4 mb-5"> 
